# introducing-cqlalchemy

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
chapters/: 04_hello_array.py  04_hello_set.py  04_hello_world.py  05_introducing_deletes.py  05_introducing_model.py  05_introducing_pointers_and_references.py  06_introducing_queries.py  06_introducing_queries_expandos_and_co.py  07_introducing_conditional_deletes.py  07_introducing_conditional_updates.py  07_introducing_transactions_uniqueness.py  09_introducing_level_and_batch.py  10_introducing_atom.py  10_introducing_atom_using_comparison_operators.py  11_introducing_unit_of_work.py  12_serialization_and_deserialization.py  12_serialization_and_deserialization_extended.py
slides/: Planet Cassandra - Introducing CQLAlchemy.key  Planet Cassandra - Introducing CQLAlchemy.pptx
slides/videos/: Hello World - Array.mov  Hello World - Expando.mov  Hello World - Set.mov  Introducing Deletes.mov  Introducing Models.mov  Introducing Pointers and References.mov  Serialization and Deserialization.mov  Transactions I.mov
