[project]
name = "introducing-cqlalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cqlalchemy",
    "rich>=15.0.0",
]

[tool.pyrefly]
disable-type-errors-in-ide = true
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.uv.sources]
cqlalchemy = { path = "../cqlalchemy/dist/cqlalchemy-3.29.3-py3-none-any.whl" }
